# nortech-datascience-interview

./: .gitignore  README.md  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0pjr31l2hr6jiafi9wiyny5gszylw7c2-source  4h1a97ldi97pf38dyqbj8hzlvk1vswqd-source  kfakcy0pns82yy8ap52phimzadams8rn-source
nortech_datascience_interview/data/: vessel_a_data.parquet  vessel_a_engine_shop_trials_data.csv  vessel_a_metadata.json  vessel_b_data.parquet  vessel_b_engine_shop_trials_data.csv  vessel_b_metadata.json
